--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "date-fns": "^2.16.1",
     "lodash.isstring": "^4.0.1",
     "lodash.omit": "^4.5.0",
+    "msgpackr": "^1.3.5",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
