--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "date-fns": "^2.16.1",
     "lodash.isstring": "^4.0.1",
     "lodash.omit": "^4.5.0",
-    "msgpackr": "git+https://git.maharshi.ninja/root/msgpackr-without-exports.git",
+    "msgpackr": "https://git.maharshi.ninja/root/msgpackr-without-exports/archive/master.tar.gz",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
