--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Very simple (and better) public key-based authentication toolkit",
   "main": "index.js",
   "author": "M",
-  "license": "UNLICENSED",
+  "license": "LGPL-3.0-or-later",
   "private": false,
   "dependencies": {
     "date-fns": "^2.16.1",
