--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "license": "LGPL-3.0-or-later",
   "private": false,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "date-fns": "^2.16.1",
+    "lodash.omit": "^4.5.0",
     "msgpackr": "^1.3.7",
     "tweetnacl": "^1.0.3"
   },
