--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "lodash.isstring": "^4.0.1",
+    "lodash.omit": "^4.5.0",
     "msgpackr": "^1.3.7",
     "tweetnacl": "^1.0.3"
   },
